--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-geocode": "^0.2.1",
     "react-icons": "^3.10.0",
     "react-leaflet": "^2.7.0",
