--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "multer": "^1.4.2",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^4.2.0",
+    "pg": "^7.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
